argocd/platform/supabase-studio/envs/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: supabase-studio
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - supabase-studio.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: supabase-studio
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
